<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Detalles"
    android:background="@mipmap/cover">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/detalleImg"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/imageView"
        android:background="@drawable/uploadimg"/>

    <EditText
        android:id="@+id/detalleNombre"
        android:layout_width="257dp"
        android:layout_height="53dp"
        android:layout_below="@+id/detalleImg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/borde_lavanda"
        android:textSize="16sp"
        android:hint="@string/detalleNombre"
        android:gravity="center"
        android:textColor="@color/purple_500"
        android:enabled="false"/>
    <EditText
        android:id="@+id/detalleTipo"
        android:layout_width="257dp"
        android:layout_height="53dp"
        android:layout_below="@+id/detalleNombre"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/borde_lavanda"
        android:textSize="16sp"
        android:hint="@string/detalleTipo"
        android:gravity="center"
        android:textColor="@color/purple_500"
        android:enabled="false"/>
    <EditText
        android:id="@+id/detalleUbi"
        android:layout_width="257dp"
        android:layout_height="53dp"
        android:layout_below="@+id/detalleTipo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/borde_lavanda"
        android:textSize="16sp"
        android:hint="@string/detalleUbi"
        android:gravity="center"
        android:textColor="@color/purple_500"
        android:enabled="false"/>
    <EditText
        android:id="@+id/detalleUrl"
        android:layout_width="257dp"
        android:layout_height="53dp"
        android:layout_below="@+id/detalleUbi"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/borde_lavanda"
        android:textSize="16sp"
        android:hint="@string/detalleUrl"
        android:gravity="center"
        android:textColor="@color/purple_500"
        android:enabled="false"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detalleUrl"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:id="@+id/btnEditar"
        android:text="@string/btnEditar"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnEditar"
        android:layout_marginTop="15sp"
        android:layout_centerHorizontal="true"
        android:id="@+id/btnActualizar"
        android:text="@string/btnActualizar"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnActualizar"
        android:id="@+id/btnEliminar"
        android:layout_marginTop="45dp"
        android:layout_centerHorizontal="true"
        android:text="@string/btnEliminar"/>


</RelativeLayout>