<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recCard"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="10dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="10dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="60dp"
            android:contentDescription="@string/imageView"
            android:layout_height="60dp"
            android:id="@+id/recImage"
            android:src="@drawable/uploadimg"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:scaleType="centerCrop"/>
        <TextView
            android:layout_width="110dp"
            android:layout_height="30dp"
            android:id="@+id/recName"
            android:text="@string/recName"
            android:textColor="@color/purple_200"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/recImage"/>
        <TextView
            android:layout_width="110dp"
            android:layout_height="30dp"
            android:id="@+id/recTipo"
            android:text="@string/recTipo"
            android:textSize="20sp"
            android:textColor="@color/purple_200"
            android:layout_toEndOf="@+id/recImage"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:maxLines="1"
            android:layout_marginTop="35dp"/>
        <TextView
            android:layout_width="110dp"
            android:layout_height="30dp"
            android:id="@+id/recUbic"
            android:text="@string/recUbic"
            android:textColor="@color/purple_200"
            android:textSize="20sp"
            android:layout_toEndOf="@+id/recImage"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:maxLines="1"
            android:layout_marginTop="60dp"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>